fixing overlaping between main sections and header

--- a/src/Pages/About/AboutUs.css
+++ b/src/Pages/About/AboutUs.css
@@ -33,6 +33,7 @@
   justify-content: center;
   flex-direction: column;
   row-gap: 10px;
+  margin-top: 100px;
 }
 .company-name {
   font-size: 52px;
@@ -60,6 +61,7 @@
   align-items: start;
   justify-content: center;
   color: #f7f7f7;
+  padding: 50px 0;
 }
 .farmer-img-container {
   position: absolute;
