--- a/src/Pages/Inversionists/Inversionists.css
+++ b/src/Pages/Inversionists/Inversionists.css
@@ -15,6 +15,7 @@
   row-gap: 30px;
   width: 70%;
   min-height: 700px;
+  padding: 100px 0;
 }
 .board-directors-title {
   font-size: 32px;
